--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URL=mongodb+srv://fridayproject3:2EVb9n56ag3FCO7H@fridaycluster.65eyd6d.mongodb.net/friday?retryWrites=true&w=majority
+SESSION_SECRET=FRIDAY_SESSION_SECRET
