--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongoose": "^6.6.1",
+    "morgan": "^1.10.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "morgan": "^1.10.0"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
